11954
Footnote:
{code}
package impillicitly
import scala.Predef.{
  $conforms => _,
  StringCanBuildFrom => _,
  fallbackStringCanBuildFrom => _,
  _
}
object Test extends App {
  class Imp
  //implicit val imp: Imp = new Imp
  println(implicitly : Imp)
}
{code}
and
{noformat}
$ scalac impillicitly.scala
impillicitly.scala:12: warning: Adaptation of argument list by inserting () is deprecated: this is unlikely to be what you want.
        signature: Predef.implicitly[T](implicit e: T): T
  given arguments: <none>
 after adaptation: Predef.implicitly((): Unit)
  println(implicitly : Imp)
          ^
impillicitly.scala:12: error: could not find implicit value for parameter e: T
  println(implicitly : Imp)
          ^
one warning found
one error found

{noformat}
